Chapter 4 : Easy and Powerful: Dates and Times in Pandas

--- a/Python/Working with Dates and Times in Python/takeaways.ipynb
+++ b/Python/Working with Dates and Times in Python/takeaways.ipynb
@@ -148,7 +148,45 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Date and time in pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Way 1 : During import\n",
+    "df = pd.read_csv('filename.csv', parse_dates = ['date_col1', 'date_col2'])\n",
+    "# Way 2 : Parsing using pandas date format\n",
+    "df[\"date_col\"] = pd.to_datetime(df[\"date_col\"], \n",
+    "                                format = \"%Y-%m-%d %H:%M:%S\",\n",
+    "                                errors='coerce')\n",
+    "# Way 3  : parsing using python date format\n",
+    "df[\"date_col\"] = df[\"date_col\"].dt.strftime(\"%d-%m-%Y\")\n",
+    "# Extract month information\n",
+    "df[\"date_col\"].dt.month\n",
+    "# Extract year information\n",
+    "df[\"date_col\"].dt.year\n",
+    "\n",
+    "# Resampling date\n",
+    "df.resample('M', on = 'date_col')['col1'].mean()\n",
+    "# Resampling count\n",
+    "df.resample('M', on = 'date_col').size()\n",
+    "# Add timezone in a datetime column\n",
+    "df['date_col'] = df['date_col'].dt.tz_localize('America/New_York', ambiguous='NaT')\n",
+    "# Convert to another timezone\n",
+    "df['date_col'] = df['date_col'].dt.tz_convert('Europe/London')\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
