--- a/Python/Writing Functions in Python/takeaways.ipynb
+++ b/Python/Writing Functions in Python/takeaways.ipynb
@@ -19,6 +19,64 @@
    "metadata": {},
    "source": [
     "```\n",
+    "# Example 1 : Function without args or kwargs\n",
+    "def func_name(param1, param2=1):\n",
+    "    \"\"\"Function Definition.\"\"\" # Function definition Docstring\n",
+    "    \n",
+    "    new_value1 = param1 ** param2\n",
+    "    new_value2 = param2 ** param1\n",
+    "    new_tuple = (new_value1, new_value2) # Binding results in a tuple\n",
+    "    \n",
+    "    return new_tuple # Returning multiple results\n",
+    "\n",
+    "func_name(2,3) # (8,9)\n",
+    "\n",
+    "# Example 2 : Function with *args (a tuple of parameters)\n",
+    "def add_all(*args):\n",
+    "    \"\"\"Sum all values in *args together.\"\"\"\n",
+    "\n",
+    "    sum_all = 0\n",
+    "    for num in args: # iterate over args tuple\n",
+    "        sum_all += num\n",
+    "\n",
+    "    return sum_all\n",
+    "\n",
+    "add_all(5, 10, 15, 20) # 50\n",
+    "\n",
+    "# Example 3 : Function with **kwargs (a dictionary of parameters)\n",
+    "def print_all(**kwargs):\n",
+    "    \"\"\"Print out key-value pairs in **kwargs.\"\"\"\n",
+    "\n",
+    "    for key, value in kwargs.items(): # iterate over kwargs dictionary\n",
+    "        print(f\"key = {key}, value = {value}\")\n",
+    "\n",
+    "print_all(name=\"dumbledore\") # key = name, value = dumbledore\n",
+    "\n",
+    "# Example 4 : Function as return value\n",
+    "def get_function():\n",
+    "    def print_me(s):\n",
+    "        print(s)\n",
+    "\n",
+    "    return print_me\n",
+    "\n",
+    "new_func = get_function() # print_me is now referenced by new_func\n",
+    "# calling new_func will now call print_me\n",
+    "new_func('This is a sentence.')\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function docstring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
     "# DRY : make functions that do only one thing at a time\n",
     "# None is a good choice for default argument\n",
     "# See documentation\n",
@@ -156,6 +214,132 @@
     "    # Read and write each line, one at a time\n",
     "        for line in f_src:\n",
     "            f_dst.write(line)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scope"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Change global variable value in local scope\n",
+    "\n",
+    "global global_var\n",
+    "global_var = other_val ** 2\n",
+    "\n",
+    "# Change outer function variable value in inner function of a nested function\n",
+    "# nonlocal variables are the variables that reside in parent function in a nested function\n",
+    "nonlocal outer_var\n",
+    "outer_var = 2\n",
+    "\n",
+    "# Presedence : Local > Enclosing > Global > Built-in\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions as return values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "def get_function():\n",
+    "    def print_me(s):\n",
+    "        print(s)\n",
+    "\n",
+    "    return print_me\n",
+    "\n",
+    "new_func = get_function() # print_me is now referenced by new_func\n",
+    "# calling new_func will now call print_me\n",
+    "new_func('This is a sentence.')\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Closures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "### Closure: Attaching nonlocal variables to nested functions\n",
+    "### When there is a nested function where inner function is dependent on\n",
+    "### nonlocal variable of outer function, closure helps to contain the variable\n",
+    "### of that outer function inside a tuple to supply it later to\n",
+    "### the inner function when needed\n",
+    "\n",
+    "def foo():\n",
+    "    a = 5\n",
+    "    def bar():\n",
+    "        print(a)\n",
+    "    return bar\n",
+    "\n",
+    "func = foo()\n",
+    "func() # 5\n",
+    "\n",
+    "# What is closure : A tuple that contains nonlocal variables\n",
+    "type(func.__closure__)\n",
+    "# See the number of nonlocal variables\n",
+    "len(func.__closure__)\n",
+    "# See values of closures\n",
+    "func.__closure__[0].cell_contents\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decorator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "### Decorators are Wrapper around functions that modify input, output, function behavior.\n",
+    "### Decorators are nothing but nested functions, where the parent function \n",
+    "### takes a function as input and the child function modifies the parameters of whatever\n",
+    "### function is passed to the parent function\n",
+    "\n",
+    "\n",
+    "def parent_func(input_func):\n",
+    "    def child_func(a, b):\n",
+    "        return input_func(a * 2, b * 2)\n",
+    "    return child_func\n",
+    "\n",
+    "@parent_func\n",
+    "def some_func(a, b):\n",
+    "    return a * b\n",
+    "\n",
+    "some_func(1, 5) # 20\n",
+    "\n",
+    "\n",
     "```"
    ]
   }
