Chapter 4 : More on Decorators

--- a/Python/Writing Functions in Python/takeaways.ipynb
+++ b/Python/Writing Functions in Python/takeaways.ipynb
@@ -322,24 +322,132 @@
    "metadata": {},
    "source": [
     "```\n",
-    "### Decorators are Wrapper around functions that modify input, output, function behavior.\n",
-    "### Decorators are nothing but nested functions, where the parent function \n",
-    "### takes a function as input and the child function modifies the parameters of whatever\n",
-    "### function is passed to the parent function\n",
+    "### Decorators: Decorators are nothing but nested functions, where the parent function \n",
+    "### takes only a function as input and the child function modifies the behavior of input function\n",
     "\n",
-    "\n",
+    "from functools import wraps\n",
     "def parent_func(input_func):\n",
-    "    def child_func(a, b):\n",
-    "        return input_func(a * 2, b * 2)\n",
+    "    @wraps(input_func)\n",
+    "    def child_func(*args, **kwargs):\n",
+    "        return input_func(*args, **kwargs)\n",
     "    return child_func\n",
     "\n",
     "@parent_func\n",
     "def some_func(a, b):\n",
     "    return a * b\n",
     "\n",
-    "some_func(1, 5) # 20\n",
+    "some_func(1, 5) \n",
     "\n",
     "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decorator Factory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "### Decorator Factory: An outermost function that wraps around a decorator and takes argument for \n",
+    "### the decorator since the decorator itself cannot take any argument other than a single function\n",
+    "\n",
+    "from functools import wraps\n",
+    "def paramholder_func( p1, p2)\n",
+    "    def parent_func(input_func):\n",
+    "        @wraps(input_func)\n",
+    "        def child_func(*args, **kwargs):\n",
+    "            return input_func(*args, **kwargs)\n",
+    "        return child_func\n",
+    "    return parent_func\n",
+    "\n",
+    "@parent_func(1,2)\n",
+    "def some_func(a, b):\n",
+    "    return a * b\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example 1 : Timer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import time\n",
+    "from functools import wraps\n",
+    "def decorator(func):\n",
+    "    \"\"\"A decorator that prints how long a function took to run.\"\"\"\n",
+    "    # Use @wraps to bind function's meta data like docstring / function name etc\n",
+    "    @wraps(func)\n",
+    "    # Define the wrapper function to return.\n",
+    "    def changed_func(*args, **kwargs):\n",
+    "        t_start = time.time()\n",
+    "        # Call the decorated function and store the result.\n",
+    "        result = func(*args, **kwargs)\n",
+    "        t_total = time.time() - t_start\n",
+    "        print('{} took {}s'.format(func.__name__, t_total))\n",
+    "        return result\n",
+    "    return changed_func\n",
+    "\n",
+    "@decorator\n",
+    "def sleep_n_seconds(n):\n",
+    "    time.sleep(n)\n",
+    "\n",
+    "sleep_n_seconds(5) # 5.00001\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example 2 : Decorator with parameter (Decorator factory)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from functools import wraps\n",
+    "# an outer function that takes argument\n",
+    "def decorator_factory(n):\n",
+    "    \"\"\"Define and return a decorator\"\"\"\n",
+    "    def decorator(func):\n",
+    "        @wraps(func)\n",
+    "        def changed_func(*args, **kwargs):\n",
+    "            for i in range(n):\n",
+    "                func(*args, **kwargs)\n",
+    "        return changed_func\n",
+    "    return decorator\n",
+    "\n",
+    "run_three_times = decorator_factory(3)\n",
+    "@run_three_times\n",
+    "def print_sum(a, b):\n",
+    "    print(a + b)\n",
+    "\n",
+    "@decorator_factory(3)\n",
+    "def print_sum(a, b):\n",
+    "    print(a + b)\n",
     "```"
    ]
   }
