Chapter 3 : More Distributions and the Central Limit Theorem

--- a/Python/Introduction to Statistics in Python/takeaways.ipynb
+++ b/Python/Introduction to Statistics in Python/takeaways.ipynb
@@ -135,14 +135,42 @@
    "metadata": {},
    "source": [
     "- uniform distribution:\n",
-    "\n",
     "\t- all outcomes are equally likely outcome\n",
     "    - flat probability density function across the entire range.\n",
-    "    \n",
     "- binomial distribution:\n",
     "\t- discrete probability distribution\n",
     "    - binary outcomes (success or failure)\n",
-    "    - independent trials"
+    "    - independent trials\n",
+    "- normal distribution:\n",
+    "    - symmetrical\n",
+    "    - probability never hits 0\n",
+    "    - described by mean and std\n",
+    "    - standard normal distribution has mean 0 and std 1\n",
+    "    - 65% area in 1-SD of mean, 95% area in 2-SD of mean, 99.7% are in 3-SD of mean\n",
+    "    - Central Limit Theorem : sampling distribution becomes closer to the normal distribution as the number of trials increases when sampling is done purely randomly and independently (mean of sample means/std etc).\n",
+    "- Poisson distribution:\n",
+    "    - events appear at certain rate (constant rate) over a fixed interval of time\n",
+    "    - expected value (lambda) represents average number of events per unit time interval\n",
+    "    - events occurrence is completely random\n",
+    "    - Discrete event (Since it represents number of events)\n",
+    "    - eg: 5 adoptions each week from a pet shelter. However at which time they will be adopted is random.                                                                        \n",
+    "- Exponential distribution:\n",
+    "    - probability of time between poisson events\n",
+    "    - Same lambda as average rate as poisson distribution\n",
+    "    - Continuous event (Since it represents time)\n",
+    "    - scale = 1/ lambda, where it measures number of time per unit event\n",
+    "    - example: one person requests ticket every 2 minutes. \n",
+    "        - So, 1 minute serves 0.5 request. So, poisson rate of lambda = 0.5\n",
+    "        - And, Exponential rate of lambda, = 1/ lambda = 1/ 0.5 = 2\n",
+    "- t-distribution\n",
+    "    - tails are thicker than normal distribution\n",
+    "    - Observations are more likely to fall further from the mean\n",
+    "    - has degree of freedom that controls the thickness of the tail\n",
+    "        - lower degree of freedom = thicker tail + higher std\n",
+    "        - higher degree of freedom = thinner tail + lower std = more like normal distribution\n",
+    "- Log normal distribution\n",
+    "    - logarithm of variable is normally distributed\n",
+    "    - Works on mean and standard daviation"
    ]
   },
   {
@@ -159,6 +187,40 @@
     "binom.cdf(7, 10, 0.5)\n",
     "# probability of exactly 7 success in 10 trials with 50% success rate\n",
     "binom.pmf(7, 10, 0.5)\n",
+    "\n",
+    "# probability of people shorter than 154 with mean height 161 and std of 7\n",
+    "from scipy.stats import norm\n",
+    "norm.cdf(154, 161, 7)\n",
+    "# Percentile (quantile) at which 90% of the distribution is below\n",
+    "norm.ppf(0.9, 161, 7)\n",
+    "#Percentile (quantile) at which 90% of the distribution is above\n",
+    "norm.ppf((1-0.9), 161, 7)\n",
+    "\n",
+    "# probability of happenning exactly 5 when average value lambda is 8\n",
+    "from scipy.stats import poisson\n",
+    "poisson.pmf(5, 8)\n",
+    "# probability of happenning 5 or less when average value lambda is 8\n",
+    "poisson.cdf(5, 8)\n",
+    "\n",
+    "# probability of waiting less than 1 minute when average value lambda is 0.5 (0.5 event per unit time)\n",
+    "from scipy.stats import expon\n",
+    "scale = 1/λ = 1/0.5 = 2\n",
+    "expon.cdf(1, scale=2)\n",
+    "\n",
+    "# Probability of having a t-value less than 2.0 with 5 degrees of freedom\n",
+    "from scipy.stats import t\n",
+    "t.cdf(2.0, df=5)\n",
+    "# Percentile (quantile) at which 90% of the distribution is below\n",
+    "t.ppf(0.9, df=5)\n",
+    "\n",
+    "\n",
+    "# Probability of a log-normal variable being less than 2.0 with mean 1.5 and standard deviation 0.8\n",
+    "from scipy.stats import lognorm\n",
+    "lognorm.cdf(2.0, s=0.8, scale=1.5)\n",
+    "# Percentile (quantile) at which 75% of the distribution is below\n",
+    "lognorm.ppf(0.75, s=0.8, scale=1.5)\n",
+    "\n",
+    "\n",
     "```"
    ]
   },
@@ -182,6 +244,24 @@
     "binom.rvs(1, 0.5, size=8) # 1 coin, flip 8 times, probability of success 50%\n",
     "binom.rvs(8, 0.5, size=1) # 8 coins, flip 1 time, probability of success 50%\n",
     "binom.rvs(3, 0.5, size=10) # 3 coins, flip 10 times, probability of success 50%\n",
+    "\n",
+    "# Generate 10 random normal values with mean 161 and std of 7\n",
+    "from scipy.stats import norm\n",
+    "norm.rvs(161, 7, size=10)\n",
+    "\n",
+    "# Generate 10 random poisson values with lambda of 8\n",
+    "from scipy.stats import poisson\n",
+    "poisson.rvs(8, size=10)\n",
+    "\n",
+    "# Generate 10 random values from a t-distribution with 5 degrees of freedom\n",
+    "from scipy.stats import t\n",
+    "t.rvs(df=5, size=10)\n",
+    "\n",
+    "# Generate 10 random values from a log-normal distribution with mean 1.5 and standard deviation 0.8\n",
+    "from scipy.stats import lognorm\n",
+    "lognorm.rvs(s=0.8, scale=1.5, size=10)\n",
+    "\n",
+    "\n",
     "```"
    ]
   }
