Chapter 4 : Correlation and Experimental Design

--- a/Python/Introduction to Statistics in Python/takeaways.ipynb
+++ b/Python/Introduction to Statistics in Python/takeaways.ipynb
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 2"
+    "# Chapter 2 and Chapter 3"
    ]
   },
   {
@@ -263,6 +263,106 @@
     "\n",
     "\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- works well with linearly related data\n",
+    "- does not work well with non-linear data \n",
+    "- Always visualize to see the trend of relationship\n",
+    "- Sometimes transforming data may help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Co-efficient and p-value\n",
+    "from scipy import stats\n",
+    "pearson_coef, p_val = stats.pearsonr(df[\"col1\"], df[\"col2\"])\n",
+    "# Visualize correlation\n",
+    "import seaborn as sns\n",
+    "sns.lmplot(x=\"col1\", y=\"col2\", data=df, ci=None)\n",
+    "plt.show()\n",
+    "\n",
+    "# Find correlation among all columns in a dataframe\n",
+    "correlations = df.corr() \n",
+    "# Use heatmap for correlation visualization (Scatterplot is not a good choice for dataframes with more than 2 variables)\n",
+    "sns.heatmap(correlations, annot=True) # use cmap='coolwarm' to provide color map\n",
+    "# Bend x label ticks 45 degree to avoid overlappings with each-other\n",
+    "plt.xticks(rotation=45) \n",
+    "plt.title('Correlations')\n",
+    "plt.show()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Confounder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Also known as lurking variable\n",
+    "- Correlation does not mean causation. It may appear so due to the lurking variable.\n",
+    "- example: drinking coffee and lung cancer has high correlation. but that does not mean drinking coffee cause lung cancer. The third variable at play is smoking. those who typically drink coffee are associated with smoking, which is the main reason for lung cancer\n",
+    "- Confounder also causes fuzziness in probabilities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/04.02.png\"  style=\"width: 400px, height: 300px;\"/></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Controlled experiment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- To see whether the correlation is due to cause (eg: A/B Testing)\n",
+    "- We randomly divide the participants into two groups and see the outcome \n",
+    "- Gold standard for grouping : helps to remove bias or confoundness\n",
+    "    1. pure random assignment, \n",
+    "    2. placebo (Control group receives treatment that has no effect and are unaware of this),\n",
+    "    3. Double blindness : Placebo + even treatment givers are unaware of placebos\n",
+    "- Study type:\n",
+    "    1. Longitudinal : participants are observed for a period of time. Slow, but no confounded variable.\n",
+    "    2. Cross-sectional : participants are observed on a snapshot of time. Fast, but possible confounded variable.\n",
+    "- example : What is the effect of an advertisement on the number of products purchased\n",
+    "    - Treatment: advertisement\n",
+    "    - Treatment group : sees advertisement\n",
+    "    - Control group : does not see advertisement\n",
+    "    - Response: number of products purchased\n",
+    "    - Note : Make sure both groups are of similar characteristics (same age, gender, etc. since anything may be a confounder)"
    ]
   }
  ],
