Chapter 3 : Sampling Distributions

--- a/Python/Sampling in Python/takeaways.ipynb
+++ b/Python/Sampling in Python/takeaways.ipynb
@@ -140,6 +140,102 @@
     "plt.show()\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Higher the sample size more accurate the estimation\n",
+    "- Sampling distribution : Distribution of means of many samples\n",
+    "- As the sample size increases, the range of calculated sample means tends to decrease.\n",
+    "- Central Limit Theorem:\n",
+    "\t- The distribution of the means gets closer to being normally distributed\n",
+    "\t- The width of the distribution of means gets narrower with larger sample size\n",
+    "- Standard error\n",
+    "\t- Standard deviation of the means of sample distributions\n",
+    "- The amount of variation in the sampling distribution is related to the amount of variation in the population and the sample size. This is another consequence of the Central Limit Theorem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### All possible combination"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from itertools import product\n",
+    "die1 = die2 = die3 = die4 = die5 = [1,2,3,4,5,6,7,8]\n",
+    "dice = pd.DataFrame(list(product(die1, die2, die3, die4, die5 )), columns=['die1', 'die2', 'die3', 'die4', 'die5'])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simulate dice roll"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "sample_means_1000 = []\n",
+    "# Simulate and store mean for visualizing sampling distribution\n",
+    "for i in range(1000): \n",
+    "    sample_means_1000.append( np.random.choice(list(range(1,7)), size=4, replace=True).mean() )\n",
+    "# Visualize distribution\n",
+    "plt.hist(sample_means_1000, bins=20)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Satistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import statistics\n",
+    "import numpy as np\n",
+    "# mode \n",
+    "statistics.mode(df['col'])\n",
+    "# median \n",
+    "statistics.median(df['col'])\n",
+    "# sample mean \n",
+    "statistics.mean(df['col'])\n",
+    "# sample variance \n",
+    "np.var(df['col'], ddof=1)\n",
+    "# sample standard deviation \n",
+    "np.std(df['col'], ddof=1)\n",
+    "# population variance \n",
+    "np.var(df['col'], ddof=0)\n",
+    "# population standard deviation \n",
+    "np.std(df['col'], ddof=0)\n",
+    "# quantile \n",
+    "np.quantile(df['col'], [0, 0.25, 0.5, 0.75, 1])\n",
+    "# iqr \n",
+    "scipy.stats.iqr(df['col'])\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
